--- a/fprice/templates/fprice/price_list.html
+++ b/fprice/templates/fprice/price_list.html
@@ -3,7 +3,7 @@
 
 {% block title %}Мои цены | {{ block.super }}{% endblock %}
 
-{% block breadcrumbs %} - Мои цены{% endblock %}
+{% block breadcrumbs %}{{ block.super }} - Мои цены{% endblock %}
 
 {% block contentclass %}price{% endblock %}
 
