--- a/fprice/templates/fprice/shop_list.html
+++ b/fprice/templates/fprice/shop_list.html
@@ -3,7 +3,7 @@
 
 {% block title %}Цены в магазинах | {{ block.super }}{% endblock %}
 
-{% block breadcrumbs %} - Магазины{% endblock %}
+{% block breadcrumbs %}{{ block.super }} - Магазины{% endblock %}
 
 {% block contentclass %}shoplist{% endblock %}
 
