--- a/fprice/templates/fprice/summary_list.html
+++ b/fprice/templates/fprice/summary_list.html
@@ -3,7 +3,7 @@
 
 {% block title %}Мои отчеты | {{ block.super }}{% endblock %}
 
-{% block breadcrumbs %} - Мои отчеты{% endblock %}
+{% block breadcrumbs %}{{ block.super }} - Мои отчеты{% endblock %}
 
 {% block contentclass %}summary{% endblock %}
 
