--- a/fprice/templates/fprice/trade_list.html
+++ b/fprice/templates/fprice/trade_list.html
@@ -3,7 +3,7 @@
 
 {% block title %}Мои покупки | {{ block.super }}{% endblock %}
 
-{% block breadcrumbs %} - Мои покупки{% endblock %}
+{% block breadcrumbs %}{{ block.super }} - Мои покупки{% endblock %}
 
 {% block contentclass %}trade{% endblock %}
 
