--- a/fprice/templates/fprice/prodshop_detail.html
+++ b/fprice/templates/fprice/prodshop_detail.html
@@ -3,13 +3,13 @@
 
 {% block title %}Цены на {{ product.title }} в магазине {{ shop.title }} | {{ block.super }}{% endblock %}
 
-{% block extrahead %}
+{% block extra_head %}
 {{ block.super }}
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.flot.min.js"></script>
 {% endblock %}
 
 {% block breadcrumbs %}
- - <a href="{% url price_product_list %}">Товары</a>{% for cate in categories %} - <a href="{{ cate.get_absolute_url }}">{{ cate }}</a>
+{{ block.super }} - <a href="{% url price_product_list %}">Товары</a>{% for cate in categories %} - <a href="{{ cate.get_absolute_url }}">{{ cate }}</a>
 {% endfor %} - <a href="{{ product.category.get_absolute_url }}">{{ product.category }}</a> - Продукт в магазине</a>
 {% endblock %}
 
