fix home breadcrumbs

--- a/fprice/templates/flatpages/price_home.html
+++ b/fprice/templates/flatpages/price_home.html
@@ -8,7 +8,7 @@
 
 {% block keywords %}{% seo keywords for flatpage %}{% endblock %}
 
-{% block breadcrumbs %}Главная страница{% endblock %}
+{% block breadcrumbs %}Добро пожаловать!{% endblock %}
 
 {% block contentclass %}pricehome{% endblock %}
 
