--- a/fprice/templates/fprice/trade_add.html
+++ b/fprice/templates/fprice/trade_add.html
@@ -75,7 +75,7 @@ th { text-align: left; }
         {% endfor %}
         </tbody>
     </table>
-    <div style="width: 606px; text-align: right"><b>Общая сумма</b> {{ forma.summary.errors }}{{ forma.summary }}</div>
+    <div id="ui_total_block"><b>Общая сумма</b> {{ forma.summary.errors }}{{ forma.summary }}</div>
     {{ formset.management_form }}
     <br />
     <input type="submit" value="Сохранить" />
