--- a/fprice/templates/fprice/shop_detail.html
+++ b/fprice/templates/fprice/shop_detail.html
@@ -15,6 +15,8 @@
 {% block content %}
 <h1>Цены в магазине {{ shop.title }}</h1>
 
+<p><a href="{% url price_shop_edit_featured shop.id %}">Ввести цены на популярные продукты</a></p>
+
 <div id="price-entries">
     <table>
     {% for item in price_list %}
