Price model refactoring

--- a/fprice/templates/fprice/price_list.html
+++ b/fprice/templates/fprice/price_list.html
@@ -16,7 +16,7 @@
 <div id="price-entries">
     <table>
     {% for item in object_list %}
-        <tr><td><i>{{ item.last_time_update|date:"Y, j b H:i" }}</i></td><td style="text-align: right; padding-left: 10px; padding-right: 0px;"><b>{{ item.price }}</b></td><td>{{ item.get_currency_display }}</td><td><a title="{{ item.shop.title }}" href="{% url price_prodshop_detail item.product.id item.shop.id %}">{{ item.product }}</a></td></tr>
+        <tr><td><i>{{ item.last_time_update|date:"Y, j b H:i" }}</i></td><td style="text-align: right; padding-left: 10px; padding-right: 0px;"><b>{{ item.price }}</b></td><td>{{ item.get_currency_display }}</td><td><a title="{{ item.shop_product.shop.title }}" href="{% url price_prodshop_detail item.shop_product.product.id item.shop_product.shop.id %}">{{ item.shop_product.product }}</a></td></tr>
     {% endfor %}
     </table>
 </div><!-- /#trade-entries -->
