--- a/fprice/templates/fprice/prodshop_detail.html
+++ b/fprice/templates/fprice/prodshop_detail.html
@@ -22,13 +22,13 @@
 <script type="text/javascript">
 $(document).ready(function() {
     var dataset = {
-        {% for shop in shop_list %}
-        "{{ shop.id }}": {
-            label: '<a href="{{ shop.get_absolute_url }}">{{ shop.title }}</a>',
+        {% for item in shop_list %}
+        "{{ item.id }}": {
+            label: '<a href="{{ item.shop.get_absolute_url }}">{{ item.shop.title }}</a>',
             color: 0,
-            data: [{% for item in object_list %}{% ifequal item.shop.id shop.id %}
-            ["{{ item.last_time_update|date:'Y/m/d G:i:s' }}",{{ item.price|escapejs }}],
-            ["{{ item.time|date:'Y/m/d G:i:s' }}",{{ item.price|escapejs }}],
+            data: [{% for price in object_list %}{% ifequal price.shop_product.shop.id shop.id %}
+            ["{{ price.last_time_update|date:'Y/m/d G:i:s' }}",{{ price.price|escapejs }}],
+            ["{{ price.time|date:'Y/m/d G:i:s' }}",{{ price.price|escapejs }}],
             {% endifequal %}{% endfor %}]
         },
         {% endfor %}
