--- a/fprice/templates/fprice/summary_detail.html
+++ b/fprice/templates/fprice/summary_detail.html
@@ -14,7 +14,7 @@
 <div id="trade-entries">
     <table>
     {% for item in object_list %}
-        <tr><td style="text-align: right; padding-left: 10px; padding-right: 0px;"><b>{{ item.cost }}</b></td><td>{{ item.price.get_currency_display }}</td><td><a title="{{ item.price.shop.title }}" href="{% url price_prodshop_detail item.price.product.id item.price.shop.id %}">{{ item.price.product }}</a></td></tr>
+        <tr><td style="text-align: right; padding-left: 10px; padding-right: 0px;"><b>{{ item.cost }}</b></td><td>{{ item.price.get_currency_display }}</td><td><a title="{{ item.price.shop_product.shop.title }}" href="{% url price_prodshop_detail item.price.shop_product.product.id item.price.shop_product.shop.id %}">{{ item.price.shop_product.product }}</a></td></tr>
     {% endfor %}
     </table>
     <p>Сумма покупок: <b><big>{{ summary.get_abs_summary }}</big> {{ summary.get_currency_display }}</b></p>
