--- a/fprice/templates/fprice/shop_detail.html
+++ b/fprice/templates/fprice/shop_detail.html
@@ -17,6 +17,12 @@
 
 <p><a href="{% url price_shop_edit_featured shop.id %}">Ввести цены на популярные продукты</a></p>
 
+<p>Категории:
+{% for cat in subcategories %}
+<a href="{% url price_shop_detail_category shop.id cat.slug %}">{{ cat }}</a>{% if not forloop.last %}, {% endif %}
+{% endfor %}
+</p>
+
 <div id="price-entries">
     <table>
     {% for item in object_list %}
